# tradinglab

./: .gitignore  README.md  pyproject.toml
lib/: binance_data_download.py  indicators.py  signal.py  utils.py
notebooks/: basic_signal.ipynb  binance_data_download.ipynb
