[project]
name = "tradinglab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.4.68",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "vectorbtpro[base-no-talib]",
]

[tool.uv.sources]
vectorbtpro = { git = "https://github.com/polakowo/vectorbt.pro.git" }
